kubernetes/apps/default/memos/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app memos
  namespace: default
spec:
  hostnames:
    - "${APP_SUBDOMAIN:-${APP}}.narden.au"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: "memos-grpc"
          namespace: default
          port: 5231
      matches:
        - headers:
            - type: Exact
              name: Content-Type
              value: "application/grpc-web+proto"
    - backendRefs:
        - name: memos-app
          namespace: default
          port: 5230
          weight: 1
